test/neg/neg-serial14.errc
Template argument of read_into must either be Serializable or an array of Serializable elements.
